package donjonDragon.entite.race;

public class Elfe extends Race
{
    public Elfe()
    {
        m_pv = 0;
        m_force = 0;
        m_dexterite = 6;
        m_vitesse = 0;
        m_initiative = 0;
    }
}
