package donjonDragon.entite.race;

public class Humain extends Race
{
    public Humain()
    {
        m_pv = 2;
        m_force = 2;
        m_dexterite = 2;
        m_vitesse = 2;
        m_initiative = 2;
    }
}
