package entite.classe;

// import equipement.*;

public abstract class Classe
{
    protected String m_nom;
    protected int m_pv;
    //protected Equipement m_equipementDepart;
}
